--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     "psr-4": {
       "craa\\ApiDebugger\\": ""
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
   }
 }
